@@ -59,6 +59,17 @@ lazy val root = (project in file("."))
       "-unchecked",
       "-Xfatal-warnings"
     ),
+    javaOptions in Universal ++= Seq(
+      s"-Dpidfile.path=/dev/null",
+      "-J-XX:MaxRAMFraction=2",
+      "-J-XX:InitialRAMFraction=2",
+      "-J-XX:MaxMetaspaceSize=300m",
+      "-J-XX:+PrintGCDetails",
+      "-J-XX:+PrintGCDateStamps",
+      s"-J-Dlogs.home=/var/log/${packageName.value}",
+      s"-J-Xloggc:/var/log/${packageName.value}/gc.log",
+      "-Dconfig.file=/etc/gu/recipes.conf"
+    ),
     javaOptions in Test += "-Dconfig.file=conf/application.test.conf"
   ))
 
